# mfti-hw-3

./: .gitignore  README.md  pyproject.toml
