[tool.poetry]
name = "mfti-hw-3"
version = "0.1.0"
description = ""
authors = ["Chumakov Mikhail <chumakov-md@zvuk.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.4"
numpy = "^1.26.2"
plotly = "^5.18.0"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
